2004-07-30  Wim Taymans  <wim@fluendo.com>

	* ext/theora/theoraenc.c: (gst_theora_enc_class_init),
	(theora_enc_sink_link), (theora_enc_chain),
	(theora_enc_set_property), (theora_enc_get_property):
	Fix encoding of non-multiple-of-16 video.

2004-07-29  David Schleef  <ds@schleef.org>

	* configure.ac: make test for audiofile more strict

2004-07-25  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/typefind/gsttypefindfunctions.c: (plugin_init):
	  give different names to typefind functions

2004-07-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* sys/ximage/ximagesink.c: (gst_ximagesink_renegotiate_size),
	(gst_ximagesink_calculate_pixel_aspect_ratio),
	(gst_ximagesink_xcontext_get), (gst_ximagesink_getcaps),
	(gst_ximagesink_sink_link), (gst_ximagesink_change_state),
	(gst_ximagesink_set_xwindow_id), (gst_ximagesink_set_property),
	(gst_ximagesink_get_property), (gst_ximagesink_init):
	* sys/ximage/ximagesink.h:
	  allocate PAR's dynamically.
	  use autodetected PAR if no object-set PAR is given.
	  add workaround for directfb's X not setting physical size.
	  fix to xvimagesink will follow tomorrow.

2004-07-28  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* ext/lame/gstlame.c: (gst_lame_chain): send tag events downstream
	* ext/shout2/gstshout2.c: (gst_shout2send_protocol_get_type),
	(gst_shout2send_get_type), (gst_shout2send_set_clock),
	(gst_shout2send_class_init), (gst_shout2send_init),
	(set_shout_metadata), (gst_shout2send_set_metadata),
	(gst_shout2send_chain), (gst_shout2send_set_property),
	(gst_shout2send_get_property), (gst_shout2send_connect),
	(gst_shout2send_change_state):
	* ext/shout2/gstshout2.h:
	- fix for sending mp3 audio to icecast2 server, if pad link function not
	called before PAUSED state
	- added option to use GStreamer clock sync (as opposed to libshout's own sync)
	- added tagging support for mp3 audio broadcasted
	* gst/monoscope/gstmonoscope.c: (gst_monoscope_class_init):
	debug info
